add controlGate methods
